categorising sources on homepage

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
 
@@ -9,7 +10,22 @@
     <title>{{heading}}</title>
     {% endif %}
 
+    <style>
+        h2 {
+            color: red
+        }
+
+        h3 {
+            color: blue
+        }
+
+        #directions {
+            color: tomato
+        }
+    </style>
+
 </head>
+
 <body>
 
     <h1>{{title}}</h1>
@@ -17,13 +33,92 @@
     <p>{{heading}}</p>
 
     <!-- sources section -->
-    <h1>Various News Sources</h1>
+    <h1> News Sources Categories</h1>
     <hr>
+
+    <!-- General section -->
     <ul>
-        {% for source in sources_display %}
+        <h2>General News Sources</h2>
+        {% for source in general %}
+        <h3>
             <li>{{source.name}}</li>
+        </h3>
+        <li><span id="directions">About :</span> {{source.description}}</li>
+        <li><span id="directions">Country :</span> {{source.country}}</li>
+        <a href="">
+            <li><span id="directions">Link :</span>{{source.url}}</li>
+        </a>
         {% endfor %}
     </ul>
-    
+
+    <!-- Sports section -->
+
+    <hr>
+    <ul>
+        <h2>Sports News Sources</h2>
+        {% for source in sports %}
+        <h3>
+            <li>{{source.name}}</li>
+        </h3>
+        <li><span id="directions">About :</span> {{source.description}}</li>
+        <li><span id="directions">Country :</span> {{source.country}}</li>
+        <a href="">
+            <li><span id="directions">Link :</span>{{source.url}}</li>
+        </a>
+        {% endfor %}
+    </ul>
+
+    <!-- Business section -->
+
+    <hr>
+    <ul>
+        <h2>Business News Sources</h2>
+        {% for source in business %}
+        <h3>
+            <li>{{source.name}}</li>
+        </h3>
+        <li><span id="directions">About :</span> {{source.description}}</li>
+        <li><span id="directions">Country :</span> {{source.country}}</li>
+        <a href="">
+            <li><span id="directions">Link :</span>{{source.url}}</li>
+        </a>
+        {% endfor %}
+    </ul>
+
+    <!-- Entertainment section -->
+
+    <hr>
+    <ul>
+        <h2>Entertainment News Sources</h2>
+        {% for source in entertainment %}
+        <h3>
+            <li>{{source.name}}</li>
+        </h3>
+        <li><span id="directions">About :</span> {{source.description}}</li>
+        <li><span id="directions">Country :</span> {{source.country}}</li>
+        <a href="">
+            <li><span id="directions">Link :</span>{{source.url}}</li>
+        </a>
+        {% endfor %}
+    </ul>
+
+    <!-- technology section -->
+
+    <hr>
+    <ul>
+        <h2>Technology News Sources</h2>
+        {% for source in tech %}
+        <h3>
+            <li>{{source.name}}</li>
+        </h3>
+        <li><span id="directions">About :</span> {{source.description}}</li>
+        <li><span id="directions">Country :</span> {{source.country}}</li>
+        <a href="">
+            <li><span id="directions">Link :</span>{{source.url}}</li>
+        </a>
+        {% endfor %}
+    </ul>
+
 </body>
+
 </html>
