--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,39 +1,6 @@
-{% import 'macros.html' as macro %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'bootstrap/base.html'%}
 
-<head>
-    <meta charset="UTF-8">
-
-    {% if title %}
-    <title>{{title}}</title>
-    {% else %}
-    <title>{{heading}}</title>
-    {% endif %}
-
-    <style>
-        h2 {
-            color: red
-        }
-
-        h3 {
-            color: blue
-        }
-
-        #directions {
-            color: tomato
-        }
-    </style>
-
-</head>
-
-<body>
-
-    <!-- Content Block -->
-    {% block content %}
-
-    {% endblock %}
-
-</body>
-
-</html>
+<!-- Navbar block  -->
+{% block navbar %}
+{% include 'navbar.html' %}
+{% endblock %}
