creating process articles results function for processing list of articles from api request

--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -16,15 +16,15 @@
     {% block content %}
     <div class="container">
 
-        <h1>{{read_article.title}}</h1>
+        <!-- <h1>{{read_article.title}}</h1> -->
         <hr>
 
         <div class="row align-items-center">
             <div class="col">
-                {{read_article.urlToImage}}
+                <!-- {{read_article.urlToImage}} -->
             </div>
             <div class="col">
-                {{read_article.description}}
+                <!-- {{read_article.description}} -->
             </div>
         </div>
     
