adding error 404 page

--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -25,7 +25,7 @@
             <hr>
             <li>{{article.description}}</li>
             <a href=""><li>{{article.url}}</li></a>
-            <img src="{{article.urlToImage}}" alt="No image for this article">
+            <img src="{{article.urlToImage}}" alt="No image for this article" height = "250px" class="img-responsive">
             <li>Published on : {{article.date}}</li>
             {% endfor %}
         </ul>
