--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,3 +1,7 @@
-h1 {
-    text-align: center
-}
+/* #allSources{
+    padding-bottom: 1%;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(83, 77, 77, 0.5);
+} */
