--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,46 +26,47 @@
     
     <div class="container">
 
-        <h1 style = "text-align:center; color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;">{{title}}</h1>
+        <h1 style = "text-align:center; color:red; font-weight:600;font-family: 'Cinzel Decorative', cursive;">{{title}}</h1>
         <hr>
-        <p style="text-align:center; font-size: 24px;">{{heading}}</p>
+        <p style = "font-family: 'Charm', cursive; font-size:24px">{{heading}}</p>
         <hr>
         
         <!-- General section -->
         <ul>
-            <h2 style = "text-align:center; color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;">General News Sources</h2>
+            <h2 style = "text-align:center; color:red; font-weight:600;font-family: 'Cinzel Decorative', cursive;">General News Sources</h2>
+            <hr>
             {{macro.display_sources_list(general)}}
         </ul>
         
         <!-- Sports section -->
         
-        <hr>
         <ul>
-            <h2 style = "text-align:center; color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Sports News Sources</h2>
+            <h2 style = "text-align:center; color:red; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Sports News Sources</h2>
+            <hr>
             {{macro.display_sources_list(sports)}}
         </ul>
         
         <!-- Business section -->
         
-        <hr>
         <ul>
-            <h2 style = "text-align:center; color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Business News Sources</h2>
+            <h2 style = "text-align:center; color:red; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Business News Sources</h2>
+            <hr>
             {{macro.display_sources_list(business)}}
         </ul>
         
         <!-- Entertainment section -->
         
-        <hr>
         <ul>
-            <h2 style = "text-align:center; color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Entertainment News Sources</h2>
+            <h2 style = "text-align:center; color:red; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Entertainment News Sources</h2>
+            <hr>
             {{macro.display_sources_list(entertainment)}}
         </ul>
         
         <!-- technology section -->
         
-        <hr>
         <ul>
-            <h2 style = "text-align:center; color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Technology News Sources</h2>
+            <h2 style = "text-align:center; color:red; font-weight:600;font-family: 'Cinzel Decorative', cursive;">Technology News Sources</h2>
+            <hr>
             {{macro.display_sources_list(tech)}}
         </ul>
 
