--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,9 +1,24 @@
 {% macro display_sources_list(sources_resulting_list) %}
-    {% for source in sources_resulting_list %}
-        <h3 style = "color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;"><li>{{source.name}}</li></h3>
-        <li style = "font-family: 'Charm', cursive; font-size:24px">ABOUT SOURCE: {{source.description}}</li>
-        <li style = "font-family: 'Charm', cursive; font-size:24px">COUNTRY: {{source.country}}</li>
-        <a href=""><li style = "font-family: 'Charm', cursive; font-size:24px">OFFICIAL SITE: {{source.url}}</li></a>
-        <a href="/sources/{{source.id}}" class="btn btn-primary">See {{source.name}} news articles</a>
-    {% endfor %}
+    <div class="row">
+
+        {% for source in sources_resulting_list %}
+
+        <div class="col-md-4">
+
+            <h3 style="color:blue; font-weight:600;font-family: 'Cinzel Decorative', cursive;">
+                <li>{{source.name}}</li>
+            </h3>
+            <li style="font-family: 'Charm', cursive; font-size:24px"> <strong>ABOUT SOURCE:</strong> {{source.description}}</li>
+            <li style="font-family: 'Charm', cursive; font-size:24px"><strong>COUNTRY:</strong> {{source.country}}</li>
+            <a href="">
+                <li style="font-family: 'Charm', cursive; font-size:24px"><strong>OFFICIAL SITE:</strong> {{source.url}}</li>
+            </a>
+            <a href="/sources/{{source.id}}" class="btn btn-primary" style="font: size 22px;font-family: 'Charm', cursive;">See
+                {{source.name}} news articles</a>
+
+        </div>
+        
+        {% endfor %}
+
+    </div>
 {% endmacro %}
