pushing updates on homepage styles

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
 
         <h1 style = "text-align:center; color:red; font-weight:600;font-family: 'Cinzel Decorative', cursive;">{{title}}</h1>
         <hr>
-        <p style = "font-family: 'Charm', cursive; font-size:24px">{{heading}}</p>
+        <p style = "font-family: 'Charm', cursive; font-size:24px;text-align:center">{{heading}}</p>
         <hr>
         
         <!-- Sports section -->
